adding initial background colors and sizing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body class="bg-gray-200">
+
+    <div class="bg-gray-200">
+        
+        <div class="w-5 h-6 bg-blue-100">Text</div>
+
+    </div>
     
 </body>
 </html>
