--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="bg-gray-200">
         
         <div class="w-5 h-6 bg-blue-100">Text</div>
+        <div class="w-5 h-6 bg-blue-100">Text</div>
+        <div class="w-5 h-6 bg-blue-100">Text</div>
 
     </div>
     
